<resources>
    <string name="app_name">UP_ConvTemp</string>
    <string name="input_temperature">Input temperature:</string>
    <string name="input_temperature_unit">Input temperature unit:</string>
    <string name="celsius_c" translatable="false">Celsius (°C)</string>
    <string name="fahrenheit_f" translatable="false">Fahrenheit (°F)</string>
    <string name="convert">Convert</string>
    <string name="result">Result:</string>
    <string name="result_output" translatable="false">Result</string>
    <string name="unit">You need to choose a unit</string>
    <string name="auto_convert">Auto-convert</string>
    <string name="temp">temp</string>
</resources>